--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,9 +10,21 @@ on:
     branches: [ "master" ]
 
 jobs:
-
   test:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: mysecret
+          POSTGRES_DB: simplebank
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+          
     steps:
     - uses: actions/checkout@v3
 
@@ -21,5 +33,8 @@ jobs:
       with:
         go-version: '1.20'
 
+    - name: Run migrations
+      run: make migrateup
+    
     - name: Test
       run: make test
