--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,11 +14,13 @@ jobs:
     runs-on: ubuntu-latest
     services:
       postgres:
-        image: postgres
+        image: postgres:15
         env:
           POSTGRES_USER: root
           POSTGRES_PASSWORD: mysecret
           POSTGRES_DB: simplebank
+        ports:
+          - 5433:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -33,8 +35,15 @@ jobs:
       with:
         go-version: '1.20'
 
+    - name: Install golang migrate
+      run: |
+        curl -L https://github.com/golang-migrate/migrate/releases/download/v4.16.2/migrate.linux-amd64.tar.gz | tar xvz
+        sudo mv migrate.linux-amd64 /usr/bin/migrate
+        which migrate
+        
+
     - name: Run migrations
-      run: make migrateup
+      run: make migrate_up
     
     - name: Test
       run: make test
