--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,7 +17,7 @@ jobs:
         image: postgres:15
         env:
           POSTGRES_USER: root
-          POSTGRES_PASSWORD: mysecret
+          POSTGRES_PASSWORD: secret
           POSTGRES_DB: simplebank
         ports:
           - 5433:5432
