--- a/app.env
+++ b/app.env
@@ -1,3 +1,5 @@
 DB_DRIVER=postgres
 DB_SOURCE=postgresql://root:secret@localhost:5433/simple_bank?sslmode=disable
 SERVER_ADDRESS=0.0.0.0:8080
+TOKEN_SYMMETRIC_KEY=NiKVQrn9qS/GHZsuybbIyKJFa+IrNsmO
+ACCESS_TOKEN_LIFETIME=15m
