--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,10 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
+      - name: Load secrets into environment
+        run: |
+          aws secretsmanager get-secret-value --secret-id bank-system --query SecretString --output text | jq 'to_entries|map("\(.key)=\(.value)")|.[]' > app.env
+
       - name: Build, tag, and push docker image to Amazon ECR
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
